(library
 (public_name csexp)
 (libraries
  base64
  re
  logs
  fmt
  ppx_jane
  cry
  fileutils
  batteries
  opam-file-format
  opam-format
  opam-state
   bitwuzla
   bnfgen
  cfg
  bonsai
  canary
  camlzip
  bos
  box
  utop
  core
  yojson
  ppx_sexp_conv
  alcotest
  bisect_ppx
  irmin
   cudf
  result
  cstruct
  ipaddr
  bigarray-compat
  ppx_cstruct
  hex
  rresult
  uutf
  uuidm
  ppx_enumerate
  ppx_hash
  ppx_optional
  ppx_fields_conv
  ppx_variants_conv
  ppx_compare
  ppx_here
  ppx_custom_printf
  ocplib-endian
  angstrom
  astring
  async_kernel
  cmdliner
  react
  reparse
  magic-mime
  ocamlgraph
  digestif
  faraday
  cpuid
   dns
  integers
  lru
  bignum
  cryptokit
  cohttp
  mirage-block
   bigstringaf
  bin_prot
  binaryen
   bls12-381
  cairo2))
