version: "14.0.0+dune"
opam-version: "2.0"
name: "uuseg"
synopsis: "Unicode text segmentation for OCaml"
maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
authors: ["The uuseg programmers"]
homepage: "https://github.com/dune-universe/uuseg/"
dev-repo: "git+https://github.com/dune-universe/uuseg.git"
bug-reports: "https://github.com/dbuenzli/uuseg/issues"
license: ["ISC"]
tags: ["unicode" "text" "segmentation" "org:erratique"]
depends: ["ocaml" {>= "4.03.0"}
          "dune" {>= "1.10"}
          "uucp" {>= "14.0.0" & < "15.0.0"}]
depopts: ["uutf"
          "cmdliner"]
conflicts: ["uutf" {< "1.0.0"}]
build: [
 [ "dune" "subst" ] {pinned}
 [ "dune" "build" "-p" name "-j" jobs ]
]
description: """
Uuseg is an OCaml library for segmenting Unicode text. It implements
the locale independent [Unicode text segmentation algorithms][1] to
detect grapheme cluster, word and sentence boundaries and the
[Unicode line breaking algorithm][2] to detect line break
opportunities.

The library is independent from any IO mechanism or Unicode text data
structure and it can process text without a complete in-memory
representation.

Uuseg depends on [Uucp](http://erratique.ch/software/uucp) and
optionally on [Uutf](http://erratique.ch/software/uutf) for support on
OCaml UTF-X encoded strings. It is distributed under the ISC license.

[1]: http://www.unicode.org/reports/tr29/
[2]: http://www.unicode.org/reports/tr14/

Homepage: http://erratique.ch/software/uuseg"""