; Overwriting node executable
; dune executes JS tests in node when (modes js) is set

(executable
 (name node_wrapper)
 (libraries unix)
 (modules node_wrapper))

(env
 (_
  ; We do not want to have the JavaScript tests executed when `dune build
  ; @runtest` is called. It would imply to have emcc as a dependency in the
  ; repository ocaml/opam-repository and it is not something we have planned to
  ; work on for the moment.
  ; JavaScript can be run using `dune build @runtest-js`
  (js_of_ocaml
   (runtest_alias runtest-js))
  ; wrapping node to load the wasm first before executing the JavaScript tests
  (binaries
   (%{workspace_root}/test/node_wrapper.exe as node))))

(copy_files ../src/blst.js)

(copy_files ../src/blst.wasm)

(tests
 (names
  test_fr
  test_g1
  test_g2
  test_pairing
  test_hash_to_curve
  test_random_state
  test_fq12
  test_gt)
 (modules
  test_fr
  test_g1
  test_g2
  test_pairing
  test_ec_make
  test_random_state
  test_hash_to_curve
  utils
  test_fq12
  test_gt
  ff_pbt)
 (package bls12-381)
 (modes js native)
 (deps
  (source_tree test_vectors))
 (libraries bls12-381 alcotest hex integers_stubs_js zarith_stubs_js))

(executable
 (name check_built_blst_portable_set)
 (libraries bls12-381)
 (modules check_built_blst_portable_set))

(executable
 (name check_built_blst_portable_not_set)
 (libraries bls12-381)
 (modules check_built_blst_portable_not_set))
